--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
 					<hr>
 					<h2>Publications</h2>
 					<div class="mini-post">
-						<h3><a href="https://openreview.net/pdf?id=PWbHmO5imM">The Ascendant AI Scientist: An Empirical Validation of the Reliability Gap on the Path to Autonomous Discovery</a></h3>
+						<h3><a href="https://openreview.net/pdf?id=PWbHmO5imM" target="_blank" rel="noopener noreferrer">The Ascendant AI Scientist: An Empirical Validation of the Reliability Gap on the Path to Autonomous Discovery</a></h3>
 						<p>Xiping Gong, David Scott Lewis, Enrique Zueco<br>IEEE IROS 2025 Workshop AIR4S</p>
 					</div>
 					<div class="mini-post">
-						<h3><a href="https://openreview.net/pdf?id=Pxn9L1lSup">Escaping the Plausibility Trap: A Verified and Abstract Memory Framework for Trustworthy Agentic Knowledge Discovery</a></h3>
+						<h3><a href="https://openreview.net/pdf?id=Pxn9L1lSup" target="_blank" rel="noopener noreferrer">Escaping the Plausibility Trap: A Verified and Abstract Memory Framework for Trustworthy Agentic Knowledge Discovery</a></h3>
 						<p>David Scott Lewis, Anar Batkhuu, Haley Yi, Xiping Gong, Zhaoxiang Feng, Saien Deng, Enrique Zueco<br>ACM CIKM 2025 Workshop TrustKDD</p>
 					</div>
 				</article>
